- 
    
Bug
 - 
    Resolution: Done
 - 
    
  Not Evaluated                     
     - 
    Qt Creator 4.14.0
 - 
    None
 
After checking the "Disable in subdirectories" checkbox in Build Steps or Clean Steps section of Make type, whenever you change any other field of this Make step, the "Disable in subdirectories" toggles. To reproduce:
1. Check the "Disable in subdirectories" checkbox
2. Type a letter in "Make arguments:" line edit. Whenever you type any letter, the "Disable in subdirectories" toggles from on to off or vice versa.
| For Gerrit Dashboard: QTCREATORBUG-25274 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 331350,3 | Don't toggle "Disable in subdirectories" checkbox on every change in Gui | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |