Don't toggle "Disable in subdirectories" checkbox on every change in Gui

Rename the "checked" arg into "disabled", for clarity.

Task-number: QTCREATORBUG-25274
Change-Id: I652d769d4a0737787e90debde2ffaa28e8cd1870
Reviewed-by: Eike Ziller <eike.ziller@qt.io>